ひでかずさん確認依頼時：ABOUT-US　〜　BLOG-detail

--- a/high-level/benefits.html
+++ b/high-level/benefits.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>社員について | 株式会社TETOTE</title>
+        <title>福利厚生について | 株式会社TETOTE</title>
         <meta name="description" content="テクノロジーで社会課題を解決する。AIやビッグデータ分析などの技術を活用した社会課題解決サービスを提供するTETOTEの採用サイト。このページでは、会社理念について解説しています。"/>
         <meta name="robots" content="noindex">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -122,163 +122,102 @@
         </div>
         <main class="main">
             <div class="main-inner">
-                <div class="page-fv case-staff">
+                <div class="page-fv case-benefits">
                     <div class="page-fv-inner">
                         <div class="page-fv__main-title en">
-                            <p>STAFF</p>
+                            <p>BENEFITS</p>
                         </div>
                         <div class="page-fv__main-subtitle">
-                            <p>社員について</p>
+                            <p>福利厚生について</p>
                         </div>
                         <div class="page-fv__main-desc">
-                            <p>弊社社員のリアルな声を紹介しています。</p>
+                            <p>充実した福利厚生制度を設けています。</p>
                         </div>
                     </div>
                 </div>
                 <nav class="breadcrumb" aria-label="パンくずリスト">
                     <ol class="breadcrumb-inner">
                         <li><a href="/">TOP</a></li>
-                        <li><a href="/about-us.html/">STAFF</a></li>
+                        <li><a href="/benefits.html/">BENEFITS</a></li>
                     </ol>
                 </nav>
-                <section class="page-staff">
-                    <div class="page-staff-inner">
-                        <div class="page-staff__container">
-                            <div class="page-staff__container-item">
-                                <a href="staff-01-nishimura.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain01.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>「あなたが担当で良かった」</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>この一言が、最高のやりがい</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2011年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">西村 優</p>
-                                    </div>
-                                </a>
+                <div class="page-benefits">
+                    <div class="page-benefits-inner">
+                        <section class="page-benefits_system">
+                            <h2 class="page-section-title">各種制度</h2>
+                            <table class="page-benefits_system-list">
+                                <tr>
+                                    <th>手当</th>
+                                    <td>
+                                        <ul>
+                                            <li>通勤手当（上限月5万円）</li>
+                                            <li>時間外割増手当</li>
+                                            <li>役職手当</li>
+                                            <li>退職金</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>制度</th>
+                                    <td>財形貯蓄</td>
+                                </tr>
+                                <tr>
+                                    <th>保険</th>
+                                    <td>社会保険完備</td>
+                                </tr>
+                                <tr>
+                                    <th>施設</th>
+                                    <td>
+                                        <ul>
+                                            <li>社員向けジム</li>
+                                            <li>社内託児所</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>休暇・休日</th>
+                                    <td>
+                                        <ul>
+                                            <li>完全週休2日制</li>
+                                            <li>年次有給休暇（初年度10日／年度途中入社は比例付与）</li>
+                                            <li>年末年始休暇（12月29日～1月3日：6日間）</li>
+                                            <li>夏季休暇（6月～9月中：5日間）</li>
+                                            <li>慶弔休暇</li>
+                                            <li>産前産後休暇</li>
+                                            <li>リフレッシュ休暇（3年勤続で5日／以降5年勤続ごとに5日支給）</li>
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </section>
+                        <section class="page-benefits_voice">
+                            <h2 class="page-section-title">制度利用者の声</h2>
+                            <div class="page-benefits_voice-text-wrapper">
+                                <div class="page-benefits_voice-text">
+                                    <p class="page-benefits_voice-text-join">2013年入社</p>
+                                    <p class="page-benefits_voice-text-name">堀内 優</p>
+                                    <p class="page-benefits_voice-text-desc">
+                                        資格取得のための費用を会社が負担してくれる制度を利用して、念願の応用技術者資格を取得できました。<br>
+                                        この制度は、自己啓発を支援してくれるので、とても助かります。今後は、さらにスキルアップを目指して、他の資格も取得していきたいと思っています。<br>
+                                        会社が成長を支援してくれるので、安心して仕事に取り組むことができます。
+                                    </p>
+                                </div>
+                                <div class="page-benefits_voice-text">
+                                    <p class="page-benefits_voice-text-join">2015年入社</p>
+                                    <p class="page-benefits_voice-text-name">神凪 理沙</p>
+                                    <p class="page-benefits_voice-text-desc">
+                                        出産後、育休を取得して、現在は短時間勤務で働いています。会社が育児に理解があるので、安心して仕事に集中できます。<br>
+                                        特に、社内託児所があるので、子供を預けながら安心して働けるのは助かります。また、短時間勤務制度も充実しているので、自分のペースで仕事復帰することができました。<br>
+                                        今後は、子供の成長に合わせて、勤務時間を調整しながら、長く働き続けたいと思っています。
+                                    </p>
+                                </div>
                             </div>
-                            <div class="page-staff__container-item">
-                                <a href="staff-02-hashimoto.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain02.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>全力で考えぬける環境</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>試練の数だけ強くなれました</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2015年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">橋本 拓也</p>
-                                    </div>
-                                </a>
-                            </div>                            
-                            <div class="page-staff__container-item">
-                                <a href="staff-03-aoki.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain03.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>お客様も知らない課題を</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>一緒に探し出す醍醐味</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">ソリューション営業</p>
-                                            <p class="staff-card_profile-joined">2017年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">青木 美月</p>
-                                    </div>
-                                </a>
-                            </div>                            
-                            <div class="page-staff__container-item">
-                                <a href="staff-04-sasaki.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain04.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>ビジネスの課題を</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>データで解決する醍醐味</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">データサイエンティスト</p>
-                                            <p class="staff-card_profile-joined">2002年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">高橋 智</p>
-                                    </div>
-                                </a>
+                            <div class="page-benefits_voice-img">
+                                <img src="images/benefits-user-voices 1.jpeg" alt="">
                             </div>
-                            <div class="page-staff__container-item">
-                                <a href="staff-05-takada.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain05.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>どんな難解な案件も</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>チームで突破できる強い連携</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2006年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">高田 凛</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="page-staff__container-item">
-                                <a href="staff-06-tachibana.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain06.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>お客様と一緒に開発</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>豊富なプライム案件が魅力です</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">システム事業部課長</p>
-                                            <p class="staff-card_profile-joined">2007年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">橘 光</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                        </section>
                     </div>
-                </section>
+                </div>
                 <div class="cta">
                     <div class="cta__img">
                         <img src="images/cta 1.jpeg" alt="">
