--- a/high-level/index.html
+++ b/high-level/index.html
@@ -181,7 +181,7 @@
                         </div>
                         <a href="about-us.html" class="more-btn hover">
                             <div><p class="more-btn-text en">VIEW MORE</p></div>
-                            <img src="images/arrow 7.svg" alt="" class="hover">
+                            <img src="images/arrow 7.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -199,132 +199,144 @@
                         </div>
                         <div class="member__slider">
                             <div class="member__slider-box">
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain01.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>「あなたが担当で良かった」</p>
+                                <div class="member__slider-item">
+                                    <a href="staff-01-nishimura.html" class="staff-card">
+                                        <div class="staff-card_image">
+                                            <img src="images/syain01.jpeg" alt="">
                                         </div>
-                                        <div class="staff-card_message2">
-                                            <p>この一言が、最高のやりがい</p>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>「あなたが担当で良かった」</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>この一言が、最高のやりがい</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2011年入社</p>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">コンサルタント</p>
+                                                <p class="staff-card_profile-joined">2011年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">西村 優</p>
                                         </div>
-                                        <p class="staff-card_profile-name">西村 優</p>
-                                    </div>
+                                    </a>
                                 </div>
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain02.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>全力で考えぬける環境</p>
+                                <div class="member__slider-item">
+                                    <a href="staff-02-hashimoto.html" class="staff-card">
+                                        <div class="staff-card_image">
+                                            <img src="images/syain02.jpeg" alt="">
                                         </div>
-                                        <div class="staff-card_message2">
-                                            <p>試練の数だけ強くなれました</p>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>全力で考えぬける環境</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>試練の数だけ強くなれました</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2015年入社</p>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">コンサルタント</p>
+                                                <p class="staff-card_profile-joined">2015年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">橋本 拓也</p>
                                         </div>
-                                        <p class="staff-card_profile-name">橋本 拓也</p>
-                                    </div>
+                                    </a>
                                 </div>                            
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain03.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>お客様も知らない課題を</p>
+                                <div class="member__slider-item">
+                                    <a href="staff-03-aoki.html" class="staff-card">
+                                        <div class="staff-card_image">
+                                            <img src="images/syain03.jpeg" alt="">
                                         </div>
-                                        <div class="staff-card_message2">
-                                            <p>一緒に探し出す醍醐味</p>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>お客様も知らない課題を</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>一緒に探し出す醍醐味</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">ソリューション営業</p>
-                                            <p class="staff-card_profile-joined">2017年入社</p>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">ソリューション営業</p>
+                                                <p class="staff-card_profile-joined">2017年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">青木 美月</p>
                                         </div>
-                                        <p class="staff-card_profile-name">青木 美月</p>
-                                    </div>
-                                </div>                            
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image reverse">
-                                        <img src="images/syain04.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>「あなたが担当で良かった」</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>この一言が、最高のやりがい</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2004年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">佐々木 健</p>
-                                    </div>
+                                    </a>
                                 </div>
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain05.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>どんな難解な案件も</p>
+                                <div class="member__slider-item">
+                                    <a href="staff-04-sasaki.html" class="staff-card">
+                                        <div class="staff-card_image reverse">
+                                            <img src="images/syain04.jpeg" alt="">
                                         </div>
-                                        <div class="staff-card_message2">
-                                            <p>チームで突破できる強い連携</p>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>「あなたが担当で良かった」</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>この一言が、最高のやりがい</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2006年入社</p>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">コンサルタント</p>
+                                                <p class="staff-card_profile-joined">2004年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">佐々木 健</p>
                                         </div>
-                                        <p class="staff-card_profile-name">高田 凛</p>
-                                    </div>
+                                    </a>
                                 </div>
-                                <div class="member__slider-item staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain06.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>お客様と一緒に開発</p>
+                                <div class="member__slider-item">
+                                    <a href="staff-05-takada.html" class="staff-card">
+                                        <div class="staff-card_image">
+                                            <img src="images/syain05.jpeg" alt="">
                                         </div>
-                                        <div class="staff-card_message2">
-                                            <p>豊富なプライム案件が魅力です</p>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>どんな難解な案件も</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>チームで突破できる強い連携</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">システム事業部課長</p>
-                                            <p class="staff-card_profile-joined">2007年入社</p>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">コンサルタント</p>
+                                                <p class="staff-card_profile-joined">2006年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">高田 凛</p>
                                         </div>
-                                        <p class="staff-card_profile-name">橘 光</p>
-                                    </div>
+                                    </a>
+                                </div>
+                                <div class="member__slider-item">
+                                    <a href="staff-06-tachibana.html" class="staff-card">
+                                        <div class="staff-card_image">
+                                            <img src="images/syain06.jpeg" alt="">
+                                        </div>
+                                        <div class="staff-card_message-wrapper">
+                                            <div class="staff-card_message1">
+                                                <p>お客様と一緒に開発</p>
+                                            </div>
+                                            <div class="staff-card_message2">
+                                                <p>豊富なプライム案件が魅力です</p>
+                                            </div>
+                                        </div>
+                                        <div class="staff-card_profile">
+                                            <div class="staff-card_profile-sub">
+                                                <p class="staff-card_profile-role">システム事業部課長</p>
+                                                <p class="staff-card_profile-joined">2007年入社</p>
+                                            </div>
+                                            <p class="staff-card_profile-name">橘 光</p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="more-btn-wrapper">
                             <a href="staff.html" class="more-btn hover">
                                 <div><p class="more-btn-text en">VIEW MORE</p></div>
-                                <img src="images/arrow 7.svg" alt="" class="hover">
+                                <img src="images/arrow 7.svg" alt="">
                             </a>
                         </div>                        
                     </div>
@@ -483,13 +495,13 @@
                                     <div>
                                         <p class="more-btn-text">募集要項</p>
                                     </div>
-                                    <img src="images/arrow 7.svg" alt="" class="hover">
+                                    <img src="images/arrow 7.svg" alt="">
                                 </a>
                                 <a href="faq.html" class="more-btn hover">
                                     <div>
                                         <p class="more-btn-text">よくある質問</p>
                                     </div>
-                                    <img src="images/arrow 7.svg" alt="" class="hover">
+                                    <img src="images/arrow 7.svg" alt="">
                                 </a>
                             </div>
                             <div class="recruitment__content-lower">
@@ -497,7 +509,7 @@
                                     <div>
                                         <p class="more-btn-text">会社概要</p>
                                     </div>
-                                    <img src="images/arrow 7.svg" alt="" class="hover">
+                                    <img src="images/arrow 7.svg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -517,7 +529,7 @@
                             <div>
                                 <p class="en">ENTRY</p>
                             </div>
-                            <img src="images/arrow 7.svg" alt="" class="hover">
+                            <img src="images/arrow 7.svg" alt="">
                         </a>
                     </div>
                 </div>
