--- a/high-level/staff-01-nishimura.html
+++ b/high-level/staff-01-nishimura.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>社員について | 株式会社TETOTE</title>
+        <title>社員について - 西村 優 | 株式会社TETOTE</title>
         <meta name="description" content="テクノロジーで社会課題を解決する。AIやビッグデータ分析などの技術を活用した社会課題解決サービスを提供するTETOTEの採用サイト。このページでは、会社理念について解説しています。"/>
         <meta name="robots" content="noindex">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -122,16 +122,30 @@
         </div>
         <main class="main">
             <div class="main-inner">
-                <div class="page-fv case-staff">
-                    <div class="page-fv-inner">
-                        <div class="page-fv__main-title en">
-                            <p>STAFF</p>
+                <div class="page-staff-personal-fv">
+                    <div class="page-staff-personal-fv-inner">
+                        <div class="page-staff-personal__text">
+                            <div class="page-staff-personal__text-title-wrapper">
+                                <div class="page-staff-personal__text-title-1">
+                                    <p>あなたが担当で良かった</p>
+                                </div>
+                                <div class="page-staff-personal__text-title-2">
+                                    <p>この一言が、最高のやりがい</p>
+                                </div>
+                            </div>
+                            <div class="page-staff-personal__profile">
+                                <p class="page-staff-personal__profile-role">コンサルタント</p>
+                                <div class="page-staff-personal__profile-name-wrapper">
+                                    <p class="page-staff-personal__profile-name">西村 優</p>
+                                    <p class="page-staff-personal__profile-joined">2011年入社</p>
+                                </div>
+                                <p class="page-staff-personal__profile-desc">
+                                    東京大学工学部を卒業後、大手IT企業でシステムエンジニアとして5年間、システム開発に携わった。その後、TETOTEに転職し、IT戦略策定やシステム導入プロジェクトの支援に従事。豊富な経験と知識を活かし、クライアントの課題解決に貢献している。
+                                </p>
+                            </div>
                         </div>
-                        <div class="page-fv__main-subtitle">
-                            <p>社員について</p>
-                        </div>
-                        <div class="page-fv__main-desc">
-                            <p>弊社社員のリアルな声を紹介しています。</p>
+                        <div class="page-staff-personal__img">
+                            <img src="images/syain01.jpeg" alt="">
                         </div>
                     </div>
                 </div>
@@ -139,78 +153,94 @@
                     <ol class="breadcrumb-inner">
                         <li><a href="/">TOP</a></li>
                         <li><a href="/about-us.html/">STAFF</a></li>
+                        <li><a href="/staff/01-nishimura.html/">NISHIMURA</a></li>
                     </ol>
                 </nav>
-                <section class="page-staff">
-                    <div class="page-staff-inner">
-                        <div class="page-staff__container">
-                            <div class="page-staff__container-item">
-                                <a href="staff-01-nishimura.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain01.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>「あなたが担当で良かった」</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>この一言が、最高のやりがい</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2011年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">西村 優</p>
-                                    </div>
-                                </a>
+                <section class="page-staff-personal__interview">
+                    <div class="page-staff-personal__interview-inner">
+                        <div class="page-staff-personal__interview-contents">
+                            <div class="page-staff-personal__interview-section" id="section-1">
+                                <h2 class="page-staff-personal__interview-section-heading">普段の業務内容について</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    TETOTEのコンサルティング本部で、ITコンサルタントとして勤務しています。主な業務内容は、以下の3つです。<br>
+                                    <br>
+                                    <span>1. クライアントの経営課題のヒアリングと分析</span><br>
+                                    <br>
+                                    クライアント企業の経営者やIT部門の責任者から、経営課題や業務内容、既存のシステム状況などをヒアリングし、課題解決のためのIT戦略を策定します。<br>
+                                    <br>
+                                    <span>2. システム導入プロジェクトの支援</span><br>
+                                    <br>
+                                    システム導入プロジェクトの企画・立案から導入後の運用まで、一貫して支援します。<br>
+                                    <br>
+                                    <span>3. IT人材育成</span><br>
+                                    <br>
+                                    クライアント企業のIT部門向けに、ITスキル向上のための研修やセミナーを実施します。<br>
+                                    これらの業務を通して、クライアント企業のIT戦略の立案から実行までを支援し、課題解決に貢献しています。
+                                </p>
                             </div>
-                            <div class="page-staff__container-item">
-                                <a href="staff-02-hashimoto.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain02.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>全力で考えぬける環境</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>試練の数だけ強くなれました</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">コンサルタント</p>
-                                            <p class="staff-card_profile-joined">2015年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">橋本 拓也</p>
-                                    </div>
-                                </a>
-                            </div>                            
-                            <div class="page-staff__container-item">
-                                <a href="staff-03-aoki.html" class="staff-card">
-                                    <div class="staff-card_image">
-                                        <img src="images/syain03.jpeg" alt="">
-                                    </div>
-                                    <div class="staff-card_message-wrapper">
-                                        <div class="staff-card_message1">
-                                            <p>お客様も知らない課題を</p>
-                                        </div>
-                                        <div class="staff-card_message2">
-                                            <p>一緒に探し出す醍醐味</p>
-                                        </div>
-                                    </div>
-                                    <div class="staff-card_profile">
-                                        <div class="staff-card_profile-sub">
-                                            <p class="staff-card_profile-role">ソリューション営業</p>
-                                            <p class="staff-card_profile-joined">2017年入社</p>
-                                        </div>
-                                        <p class="staff-card_profile-name">青木 美月</p>
-                                    </div>
-                                </a>
-                            </div>                            
-                            <div class="page-staff__container-item">
+                            <div class="page-staff-personal__interview-section" id="section-2">
+                                <h2 class="page-staff-personal__interview-section-heading">学生時代に力を入れたことは？</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    学生時代に力を入れたことは、ロボットプログラミングサークルでの活動です。<br>
+                                    私は、東京大学工学部在学中に、ロボットプログラミングサークルに所属していました。サークルでは、二足歩行ロボットや自律走行ロボットなどの製作に取り組み、全国大会にも出場しました。<br>
+                                    この活動を通して、問題解決能力、チームワーク力、プレゼンテーション能力を身につけました。<br>
+                                    特に、二足歩行ロボットの製作では、ロボットが歩行できるようにするためのプログラムを開発しました。試行錯誤を繰り返しながら、目標を達成するために必要な知識を積極的に学び、チームメンバーと協力して課題を解決しました。<br>
+                                    この経験は、現在の仕事、つまり、クライアントの課題を解決するために、必要な知識を積極的に学び、チームメンバーと協力して課題を解決する、ここに活かされています。
+                                </p>
+                            </div>
+                            <div class="page-staff-personal__interview-section" id="section-3">
+                                <h2 class="page-staff-personal__interview-section-heading">TETOTEを志望した理由は？</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    IT戦略策定からシステム導入まで一貫して支援できる点です。<br>
+                                    前職でシステムエンジニアとして5年間、システム開発に携わった中で、単なる技術課題解決ではなく、クライアントの経営課題解決に貢献したいと考えるようになりました。<br>
+                                    TETOTEは、IT戦略策定から導入まで一貫して支援できる数少ないコンサルティング会社です。自分の技術力と経営視点を活かし、課題解決に貢献したいという想いを叶えられる環境だと確信しました。<br>
+                                </p>
+                            </div>
+                            <div class="page-staff-personal__interview-section" id="section-4">
+                                <h2 class="page-staff-personal__interview-section-heading">やりがいを感じる瞬間は？</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    特に印象深いのは、大手製造業のA社でのプロジェクトです。A社は、生産管理システムの老朽化により、作業効率の低下とコスト増加に悩んでいました。<br>
+                                    私は、A社の経営層や現場担当者と綿密なヒアリングを行い、課題を分析しました。そして、最新のクラウド技術を活用した新しい生産管理システムを提案しました。<br>
+                                    導入後は、作業効率が大幅に向上し、コストも削減できました。さらに、システムの使いやすさが好評で、現場担当者からも感謝の言葉を頂きました。<br>
+                                    この経験を通して、ITの力でクライアントの課題解決に貢献できる仕事の価値を実感しました。
+                                </p>
+                            </div>
+                            <div class="page-staff-personal__interview-section" id="section-5">
+                                <h2 class="page-staff-personal__interview-section-heading">どんな人と一緒に働きたい？</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    自分の考えを相手に分かりやすく伝え、相手の意見を尊重できる人です。<br>
+                                    このような人々と共に働くことで、互いに刺激を与え合い、より高いレベルを目指していけると考えています。
+                                </p>
+                            </div>
+                            <div class="page-staff-personal__interview-section" id="section-6">
+                                <h2 class="page-staff-personal__interview-section-heading">応募者へのメッセージ</h2>
+                                <p class="page-staff-personal__interview-section-desc">
+                                    TETOTEは、「ITの力で社会課題を解決する」というビジョンを掲げ、日々成長している会社です。<br>
+                                    高い志を持ち、自ら考え行動できる人と一緒に働きたいです。<br>
+                                    一緒に、社会に貢献できる仕事に挑戦しましょう！
+                                </p>
+                            </div>
+                        </div>
+                        <div class="page-staff-personal__interview-toc">
+                            <div class="page-staff-personal__interview-toc__title">
+                                <p>目次</p>
+                            </div>
+                            <ul  class="page-staff-personal__interview-toc__list">
+                                <li><a href="#section-1">・普段の業務内容について</a></li>
+                                <li><a href="#section-2">・学生時代に力を入れたことは？</a></li>
+                                <li><a href="#section-3">・TETOTEを志望した理由は？</a></li>
+                                <li><a href="#section-4">・やりがいを感じる瞬間は？</a></li>
+                                <li><a href="#section-5">・どんな人と一緒に働きたい？</a></li>
+                                <li><a href="#section-6">・応募者へのメッセージ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <div class="page-staff-personal__othermembers">
+                    <div class="page-staff-personal__othermembers-inner">
+                        <p class="page-staff-personal__othermembers-title">その他のメンバー</p>
+                        <div class="page-staff-personal__othermembers-list">
+                            <div class="page-staff-personal__othermembers-item">
                                 <a href="staff-04-sasaki.html" class="staff-card">
                                     <div class="staff-card_image">
                                         <img src="images/syain04.jpeg" alt="">
@@ -232,7 +262,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="page-staff__container-item">
+                            <div class="page-staff-personal__othermembers-item">
                                 <a href="staff-05-takada.html" class="staff-card">
                                     <div class="staff-card_image">
                                         <img src="images/syain05.jpeg" alt="">
@@ -254,7 +284,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="page-staff__container-item">
+                            <div class="page-staff-personal__othermembers-item">
                                 <a href="staff-06-tachibana.html" class="staff-card">
                                     <div class="staff-card_image">
                                         <img src="images/syain06.jpeg" alt="">
@@ -278,7 +308,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
                 <div class="cta">
                     <div class="cta__img">
                         <img src="images/cta 1.jpeg" alt="">
